typescript/checker/tests/conformance/parser/ecmascript5/ExportAssignments/parserExportAssignment1.ts.stderr
error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            9,
        ),
        hi: BytePos(
            12,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/parser/ecmascript5/ExportAssignments/parserExportAssignment1.ts:1:10
  |
1 | export = foo
  |          ^^^

